--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Design System</title>
-    <link rel="stylesheet" type="text/css" href="file:///D:/Back%20up%20Mihai/Website%20Design%20System/resources/css/index.css"
+    <link rel="stylesheet" type="text/css" href="/index.css"
 </head>
 <body>
     <header>
