--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Website Design System</title>
-    <link rel="stylesheet" type="text/css" href="https://github.com/Mihai20000/Webstyle.io/blob/main/index.css"
+    <link rel="stylesheet" type="text/css" href="main/index.css"
 </head>
 <body>
     <header>
